--- a/client/index.html
+++ b/client/index.html
@@ -1,43 +1,1 @@
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>friendzone</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
-  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-  <script src="https://kit.fontawesome.com/d279b37b8a.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-
-<body>
-  <header>
-    <nav></nav>
-    <div id="authbar"></div>
-  </header>
-  <main>
-    <h1>Hello, World!</h1>
-  </main>
-  <footer></footer>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/gh/jakeoverall/lightpath/dist/ligthpath.browser.min.js"></script>
-  <script src="https://cdn.auth0.com/js/auth0-spa-js/1.2/auth0-spa-js.production.js"></script>
-  <script src="app/main.js" type="module"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><link href=//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet><link href=/your-path-to-fontawesome/css/fontawesome.css rel=stylesheet><script src=https://code.iconify.design/1/1.0.7/iconify.min.js></script><script src=https://kit.fontawesome.com/d279b37b8a.js crossorigin=anonymous></script><link rel=stylesheet href=path/to/font-awesome/css/font-awesome.min.css><title>FriendZone</title><link href=/css/chunk-01544312.38655798.css rel=prefetch><link href=/css/chunk-7187360f.1bc922b5.css rel=prefetch><link href=/css/gamedetails.aa902125.css rel=prefetch><link href=/css/games.9b71a974.css rel=prefetch><link href=/js/chunk-01544312.b72ec0ff.js rel=prefetch><link href=/js/chunk-7187360f.c02f7e29.js rel=prefetch><link href=/js/gamedetails.057b817f.js rel=prefetch><link href=/js/games.34ffed29.js rel=prefetch><link href=/css/app.16acca53.css rel=preload as=style><link href=/js/app.a8e462e8.js rel=preload as=script><link href=/js/chunk-vendors.e944cc40.js rel=preload as=script><link href=/css/app.16acca53.css rel=stylesheet></head><body><noscript><strong>We're sorry but kanban doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=https://code.jquery.com/jquery-3.3.1.slim.min.js integrity=sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo crossorigin=anonymous></script><script src=https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js integrity=sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 crossorigin=anonymous></script><script src=https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js integrity=sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM crossorigin=anonymous></script><script src=/js/chunk-vendors.e944cc40.js></script><script src=/js/app.a8e462e8.js></script></body></html>
