--- a/clientsrc/public/index.html
+++ b/clientsrc/public/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but kanban doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but Friendzone doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
